# notes-cli

./: .gitignore  Cargo.toml  README.md  notes-cli.excalidraw
src/: command.rs  database.rs  handler.rs  main.rs  note.rs  repository.rs
