[package]
name = "notes-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
json = "0.12.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
